dev-env/pgadmin/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin
  labels:
    app.kubernetes.io/name: pgadmin
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: pgadmin
  ports:
    - name: webui
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin
  annotations:
    avp.kubernetes.io/path: "kv/data/argocd"
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: pgadmin
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: pgadmin
    spec:
      automountServiceAccountToken: false
      containers:
        - name: pgadmin
          image: dpage/pgadmin4:9.3.0
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 50m
              memory: 256Mi
              ephemeral-storage: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
              ephemeral-storage: 128Mi
          volumeMounts:
            - mountPath: /var/lib/pgadmin
              name: configdir
            - mountPath: "/pgadmin4/config_local.py"
              name: keycloak-config
              subPath: config_local.py
          ports:
            - containerPort: 80
              name: web
      volumes:
        - name: configdir
          persistentVolumeClaim:
            claimName: pgadmin-data
        - name: keycloak-config
          secret:
            secretName: pgadmin-keycloak
